Fix overflow-y not showing

--- a/styles/base.css
+++ b/styles/base.css
@@ -6,7 +6,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
-    overflow: hidden;
+    overflow-x: hidden;
     height: 100%;
 }
 
